--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    color: red;
+    color: rgb(174, 0, 255);
     text-align: center;
 }
 h2{
@@ -9,4 +9,13 @@ img{
     display: block;
     margin: 0 auto;
     width: 800px;
+    border-radius: 12px;
+}
+.btn {
+    color: white;
+    background: blueviolet;
+    border-radius: 10px;
+    padding: 12px 20px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
 }
