--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #f9f7fe;
+    background-color: #599c62;
     font-family: "Roboto", sans-serif;
   }
   
   a {
-    color: #885df1;
+    color: #135817;
   }
   
   .weather-app {
@@ -17,7 +17,7 @@ body {
   }
   
   header {
-    border-bottom: 1px solid #f9f7fe;
+    border-bottom: 1px solid #92c59d;
     padding: 0 0 30px 0;
   }
   
@@ -31,7 +31,7 @@ body {
   }
   
   .search-form-button {
-    background: #885df1;
+    background: #02300a;
     padding: 15px 30px;
     border: none;
     font-size: 16px;
@@ -57,13 +57,13 @@ body {
   
   .weather-app-details {
     font-size: 16px;
-    color: rgba(39, 33, 66, 0.4);
+    color: rgba(22, 148, 70, 0.699);
     line-height: 24px;
     font-weight: 500;
   }
   
   .weather-app-details strong {
-    color: #f65282;
+    color: #156320;
   }
   
   .weather-app-temperature-container {
@@ -81,9 +81,41 @@ body {
     font-weight: bold;
   }
   
-  .weatehr-app-unit {
+  .weather-app-unit {
     margin-top: 6px;
     font-size: 28px;
+  }
+  
+  .weather-forecast {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+  }
+  
+  .weather-forecast-date {
+    text-align: center;
+    color: rgba(11, 82, 17, 0.4);
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .weather-forecast-icon {
+    width: 88px;
+    height: 88px;
+    display: block;
+    margin: 0 auto;
+  }
+  .weather-forecast-temperatures {
+    text-align: center;
+    color: #012207;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .weather-forecast-temperature {
+    padding: 0 10px;
   }
   
   footer {
@@ -91,6 +123,6 @@ body {
     padding: 30px 0 0 0;
     text-align: center;
     font-size: 14px;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgb(5, 5, 5);
   }
   
